# comp-intel-agent

./: .gitignore  ARCHITECTURE.md  README.md  railway.json
backend/: .env.example  .gitignore  Dockerfile  README.md  agent.py  change_detector.py  main.py  market_discovery_agent.py  pyproject.toml  railway.toml  schemas.py
frontend/: .env.example  .npmrc  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: trace
frontend/.next/cache/: .rscinfo  .tsbuildinfo  config.json
frontend/.next/cache/eslint/: .cache_krhr3l
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @radix-ui.js  @swc.js  class-variance-authority.js  clsx.js  lucide-react.js  next.js  (+1 more)
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: ActionPlanSheet.tsx  AskAI.tsx  AuthGuard.tsx  CalculationTooltip.tsx  CompanyCard.tsx  ComparisonBanner.tsx  Dashboard.tsx  DigestView.tsx  EmptyState.tsx  ExportMenu.tsx  NewsDetailDialog.tsx  NewsSection.tsx  NotesSidebar.tsx  PasswordGate.tsx  SWOTGrid.tsx  SourceBadge.tsx  SourcesFooter.tsx  SourcesInfo.tsx  dashboard-header.tsx
frontend/components/tabs/: AIInsightsTab.tsx  AlertsTab.tsx  CompareTab.tsx  ExecutiveTab.tsx  FrameworksTab.tsx  MarketTab.tsx  PricingTab.tsx
frontend/components/ui/: alert.tsx  button.tsx  card.tsx  dialog.tsx  sheet.tsx  tabs.tsx
frontend/lib/: api.ts  metric-utils.ts  pricing-utils.ts  types.ts
(+37 files in other folders)
